# gitmopy

./: .readthedocs.yml  CLI_DOCS.md  DOCS.md  LICENSE  README.md  pyproject.toml
docs/: conf.py  emoji_sets.rst  index.rst  requirements-docs.txt
gitmopy/: __init__.py  cli.py  constants.py  git.py  history.py  prompt.py  utils.py
gitmopy/assets/: ai_devmojis.yaml  conventional.yaml  gitmojis.yaml
