[tool.poetry]
name = "gitmopy"
version = "0.4.1"
description = "A python command-line for gitmoji"
authors = ["vict0rsch <vsch@pm.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
GitPython = "^3.1.31"
typer = {extras = ["all"], version = ">=0.8.0"}
pyyaml = "^6.0"
inquirerpy = "^0.3.4"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
ipython = "^8.14.0"
pydocstyle = "^6.3.0"

[tool.poetry.scripts]
gitmopy = "gitmopy.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
